--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,7 @@ body {
    margin: 0;
    background-color: var(--background-color);
    color: var(--text-color);
+   height: 100vh;
 }
 
 .calc-grid {
@@ -40,17 +41,19 @@ body {
    justify-content: center;
    align-content: center;
    min-height: 100vh;
-   grid-template-columns: repeat(4, 100px);
-   grid-template-rows: minmax(120px, auto) repeat(5, 100px);
+   grid-template-columns: repeat(4, minmax(80px, 1fr));
+   grid-template-rows: minmax(120px, auto) repeat(5, minmax(80px, auto));
+   gap: 10px;
 }
 
 .calc-grid>button {
    cursor: pointer;
-   font-size: 2rem;
+   font-size: 2.5rem;
    border: 1px solid var(--button-border-color);
    outline: none;
    background-color: var(--button-color);
    color: var(--text-color);
+   padding: 15px;
 }
 
 .calc-grid>button:hover {
@@ -82,4 +85,11 @@ body {
 .output .current-operand {
    color: var(--output-text-color);
    font-size: 2.5rem;
+}
+
+@media screen and (min-width: 768px) {
+   .calc-grid {
+      grid-template-columns: repeat(4, 100px);
+      grid-template-rows: minmax(120px, auto) repeat(5, 100px);
+   }
 }
