--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,8 @@ body {
 }
 
 .calc-grid>button {
+   display: flex;
+   justify-content: center;
    cursor: pointer;
    font-size: 2.5rem;
    border: 1px solid var(--button-border-color);
@@ -85,6 +87,21 @@ body {
 .output .current-operand {
    color: var(--output-text-color);
    font-size: 2.5rem;
+}
+
+.toggle-button {
+   position: absolute;
+   top: 20px;
+   right: 20px;
+   background-color: var(--button-color);
+   border: 1px solid var(--button-border-color);
+   color: var(--text-color);
+   padding: 10px 20px;
+   cursor: pointer;
+}
+
+.toggle-button:hover {
+   background-color: var(--hover-color);
 }
 
 @media screen and (min-width: 768px) {
