--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@ body {
 .calc-grid {
    display: grid;
    justify-content: center;
-   align-content: center;
+   align-content: normal;
    margin: 0 5px;
    min-height: 100vh;
    grid-template-columns: repeat(4, minmax(80px, 1fr));
@@ -87,8 +87,9 @@ body {
    font-size: 2.5rem;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 430px) {
    .calc-grid {
+      align-content: center;
       grid-template-columns: repeat(4, 100px);
       grid-template-rows: minmax(120px, auto) repeat(5, 100px);
    }
