--- a/src/styles.css
+++ b/src/styles.css
@@ -1,97 +1,97 @@
 :root {
-   --background-color: #0D1117;
-   --text-color: #FFFFFF;
-   --button-color: black;
-   --button-border-color: #FFFFFF;
-   --hover-color: rgba(255, 255, 255, 0.125);
-   --output-background-color: rgba(255, 255, 255, 0.125);
-   --output-border-color: #FFFFFF;
-   --output-text-color: rgba(255, 255, 255, .75);
+  --background-color: #0d1117;
+  --text-color: #ffffff;
+  --button-color: black;
+  --button-border-color: #ffffff;
+  --hover-color: rgba(255, 255, 255, 0.125);
+  --output-background-color: rgba(255, 255, 255, 0.125);
+  --output-border-color: #ffffff;
+  --output-text-color: rgba(255, 255, 255, 0.75);
 }
 
 .light-mode {
-   --background-color: #FFFFFF;
-   --text-color: #000000;
-   --button-color: #F0F0F0;
-   --button-border-color: #000000;
-   --hover-color: rgba(0, 0, 0, 0.125);
-   --output-background-color: #F0F0F0;
-   --output-border-color: #000000;
-   --output-text-color: rgba(0, 0, 0, .75);
+  --background-color: #ffffff;
+  --text-color: #000000;
+  --button-color: #f0f0f0;
+  --button-border-color: #000000;
+  --hover-color: rgba(0, 0, 0, 0.125);
+  --output-background-color: #f0f0f0;
+  --output-border-color: #000000;
+  --output-text-color: rgba(0, 0, 0, 0.75);
 }
 
 *,
 *::before,
 *::after {
-   box-sizing: border-box;
-   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-   font-weight: normal;
+  box-sizing: border-box;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-weight: normal;
 }
 
 body {
-   padding: 0;
-   margin: 0;
-   background-color: var(--background-color);
-   color: var(--text-color);
-   height: 100vh;
+  padding: 0;
+  margin: 0;
+  background-color: var(--background-color);
+  color: var(--text-color);
+  height: 100vh;
 }
 
 .calc-grid {
-   display: grid;
-   justify-content: center;
-   align-content: normal;
-   margin: 0 5px;
-   grid-template-columns: repeat(4, minmax(70px, 1fr));
-   grid-template-rows: minmax(100px, auto) repeat(5, minmax(60px, auto));
-   gap: 5px;
-   height: 50vh;
+  display: grid;
+  justify-content: center;
+  align-content: normal;
+  margin: 0 5px;
+  grid-template-columns: repeat(4, minmax(70px, 1fr));
+  grid-template-rows: minmax(100px, auto) repeat(5, minmax(60px, auto));
+  gap: 5px;
+  height: 50vh;
 }
 
-.calc-grid>button {
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   cursor: pointer;
-   font-size: 2.5rem;
-   border: 1px solid var(--button-border-color);
-   outline: none;
-   background-color: var(--button-color);
-   color: var(--text-color);
-   padding: 15px;
+.calc-grid > button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  font-size: 2.5rem;
+  border: 1px solid var(--button-border-color);
+  outline: none;
+  background-color: var(--button-color);
+  color: var(--text-color);
+  padding: 15px;
 }
 
-.calc-grid>button:hover {
-   background-color: var(--hover-color);
+.calc-grid > button:hover {
+  background-color: var(--hover-color);
 }
 
 .output {
-   grid-column: span 4;
-   background-color: var(--output-background-color);
-   border: 1px solid var(--output-border-color);
-   display: flex;
-   align-items: flex-end;
-   justify-content: space-around;
-   flex-direction: column;
-   padding: 10px;
-   word-wrap: break-word;
-   word-break: break-all;
+  grid-column: span 4;
+  background-color: var(--output-background-color);
+  border: 1px solid var(--output-border-color);
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-around;
+  flex-direction: column;
+  padding: 10px;
+  word-wrap: break-word;
+  word-break: break-all;
 }
 
 .output .previous-operand {
-   color: var(--output-text-color);
-   font-size: 1.5rem;
+  color: var(--output-text-color);
+  font-size: 1.5rem;
 }
 
 .output .current-operand {
-   color: var(--output-text-color);
-   font-size: 2.5rem;
+  color: var(--output-text-color);
+  font-size: 2.5rem;
 }
 
 @media screen and (min-width: 430px) {
-   .calc-grid {
-      min-height: 100vh;
-      align-content: center;
-      grid-template-columns: repeat(4, 100px);
-      grid-template-rows: minmax(120px, auto) repeat(5, 100px);
-   }
+  .calc-grid {
+    min-height: 100vh;
+    align-content: center;
+    grid-template-columns: repeat(4, 100px);
+    grid-template-rows: minmax(120px, auto) repeat(5, 100px);
+  }
 }
